--- a/ApplicationTemplate/ApplicationTemplate.csproj
+++ b/ApplicationTemplate/ApplicationTemplate.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<AssemblyVersion>0.0</AssemblyVersion>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Reference Include="ApplicationCore">
+			<HintPath>..\Dependencies\ApplicationCore.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
