--- a/ApplicationManager/ApplicationCore.csproj
+++ b/ApplicationManager/ApplicationCore.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
+    <AssemblyVersion>5.1</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
